Make sure splash background gradient always covers the element nicely

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
     background-color: #A5D6F5;
     background-image: url('city.png');
     background-image: url('city.png'), radial-gradient(circle at 50% 40%, #C8E0EF 0%, #A5D6F5 95%);
-    background-size: 1204px;
+    background-size: 1204px, 100%;
     background-repeat: no-repeat;
     background-position: 50% -25%;
 
